--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "scripts": {
-    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "build": "rimraf build && tsc",
+    "format": "prettier src/**/*.ts --write",
+    "build": "rm -rf build && tsc",
     "start": "npm run build && node build/index.js",
-    "local": "nodemon"
+    "local": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
+  },
+  "prettier": {
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "arrowParens": "avoid",
+    "endOfLine": "lf"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.1",
     "@types/nodemon": "^1.19.0",
     "@types/pg": "^8.6.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
-    "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
@@ -22,13 +30,5 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0"
-  },
-  "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": ".ts",
-    "ignore": [],
-    "exec": "ts-node src/index.ts"
   }
 }
