--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "format": "prettier src/**/*.ts --write",
     "build": "rm -rf build && tsc",
-    "start": "npm run build && node build/index.js",
+    "start": "node build/index.js",
     "local": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
   },
   "prettier": {
