--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^15.12.1",
     "@types/nodemon": "^1.19.0",
     "@types/pg": "^8.6.0",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "ts-node": "^10.0.0",
@@ -29,6 +30,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "uuid": "^8.3.2"
   }
 }
