--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
+    "serverless-http": "^2.7.0",
     "uuid": "^8.3.2"
   }
 }
